--- a/Gnoquis/Localizable/ca-ES.lproj/Localizable.strings
+++ b/Gnoquis/Localizable/ca-ES.lproj/Localizable.strings
@@ -5,6 +5,8 @@
   Created by kino on 11/08/2017.
   Copyright © 2017 Rafa Cosin. All rights reserved.
 */
+"Notes" = "Notes";
+"order by" = "ordenat per";
 "Name" = "Nom";
 "Age" = "Edat";
 "Weight" = "Pes";
