--- a/Gnoquis/Localizable/en.lproj/Localizable.strings
+++ b/Gnoquis/Localizable/en.lproj/Localizable.strings
@@ -5,10 +5,12 @@
   Created by kino on 11/08/2017.
   Copyright © 2017 Rafa Cosin. All rights reserved.
 */
+"Notes" = "Notes";
+"order by" = "order by";
 "Name" = "Name";
 "Age" = "Age";
 "Weight" = "Weight";
-"Height" = "Weight";
+"Height" = "Height";
 "Friends" = "Friends";
 "Professions" = "Professions";
 "Hair color" = "Hair color";
